Layout fixes 1. Stopped steps from overlapping onto options area on SM width.

--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -5,7 +5,7 @@
 
 #steps {
     background-color: #1C5A75;
-    min-height: 50px;
+    /* min-height: 50px; */ /* Was causing steps to overlap onto options area on sm width. */
     line-height: 45px;
 }
 
